src/objects/XC_Line_Sheet_Item__c.object
<CustomObject>
    <fields>
        <fullName>XC_Line_Sheet__c</fullName>
        <label>Line Sheet</label>
        <referenceTo>XC_Line_Sheet__c</referenceTo>
        <relationshipLabel>Line Sheet Items</relationshipLabel>
        <relationshipName>Line_Sheet_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>XC_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Line Sheet Items</relationshipLabel>
        <relationshipName>Line_Sheet_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>XC_Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Line Sheet Item</label>
    <nameField>
        <displayFormat>LSIN-{0000}</displayFormat>
        <label>Line Sheet Items Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Line Sheet Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>